<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Proxer.Me</string>
    <string name="section_anime">Anime</string>
    <string name="section_schedule">Anime-Wochenplan</string>
    <string name="section_chat">Chat</string>
    <string name="section_manga">Manga</string>
    <string name="section_news">News</string>
    <string name="section_bookmarks">Lesezeichen</string>
    <string name="section_guest">Gast</string>
    <string name="section_login">Anmelden</string>
    <string name="section_user_subtitle">Angemeldet</string>
    <string name="section_logout">Abmelden</string>
    <string name="section_info">Info</string>
    <string name="section_settings">Einstellungen</string>
    <string name="section_server_status">Serverstatus</string>
    <string name="section_notifications">Benachrichtigungen</string>
    <string name="section_profile_settings">Profileinstellungen</string>
    <string name="section_profile_info">Profil</string>
    <string name="section_profile_about">Infos</string>
    <string name="section_top_ten">Favoriten</string>
    <string name="section_user_media_list_anime">Anime</string>
    <string name="section_user_media_list_manga">Manga</string>
    <string name="section_user_comments">Kommentare</string>
    <string name="section_user_history">Chronik</string>
    <string name="section_media_info">Info</string>
    <string name="section_comments">Kommentare</string>
    <string name="section_relations">Verbindungen</string>
    <string name="section_recommendations">Empfehlungen</string>
    <string name="section_discussions">Diskussionen</string>
    <string name="section_industry_info">Info</string>
    <string name="section_industry_projects">Projekte</string>
    <string name="section_translator_group_info">Info</string>
    <string name="section_translator_group_projects">Projekte</string>
    <string name="theme_classic">Klassisch</string>
    <string name="theme_bg">Blau Grün</string>
    <string name="theme_gloomy">Düster</string>
    <string name="action_navigate_up">Zurück</string>
    <string name="action_reset">Zurücksetzen</string>
    <string name="action_send">Senden</string>
    <string name="action_remove">Entfernen</string>
    <string name="profile_team">Team</string>
    <string name="profile_donator">Unterstützer</string>
    <string name="action_edit">Bearbeiten</string>
    <string name="comments_sort_helpful">Hilfreichste</string>
    <string name="comments_sort_newest">Neueste</string>
    <string name="media_info_show_less">Weniger anzeigen</string>
    <string name="media_info_unrated_tags">Unbewertete</string>
    <string name="media_info_spoiler_tags">Spoiler</string>
    <string name="action_create_conference">Neue Unterhaltung</string>
    <string name="chat_search_hint">Unterhaltungen durchsuchen</string>
    <string name="chat_read_only">Nur lesen</string>
    <string name="bookmark_available">Verfügbar</string>
    <string name="bookmark_unavailable">Noch nicht verfügbar</string>
    <string name="bookmark_filter_available">Nur verfügbare</string>
    <string name="bookmark_search_hint">Lesezeichen durchsuchen</string>
    <string name="bookmark_open_details">Details anzeigen</string>
    <string name="action_clear_search">Suche leeren</string>
    <string name="media_list_search_hint">Titel suchen</string>
    <string name="media_list_genres">Genres</string>
    <string name="media_list_tags">Tags</string>
    <string name="media_list_tags_search_hint">Tags durchsuchen</string>
    <string name="media_list_tri_state_hint">Einmal tippen zum Einschließen, nochmal zum Ausschließen</string>
    <string name="media_list_tags_loading">Tags werden geladen…</string>
    <string name="media_list_tags_more">%d weitere – suche, um sie zu finden</string>
    <string name="media_list_options">Optionen</string>
    <string name="media_list_rating_content_description">Bewertung %s</string>
    <string name="theme_dynamic">Dynamisch</string>
    <string name="theme_amoled">Reines Schwarz im dunklen Modus</string>
    <string name="theme_amoled_summary">Spart Akku auf OLED-Displays</string>
    <string name="theme_variant_title">Variante</string>
    <string name="theme_variant_light">Hell</string>
    <string name="theme_variant_dark">Dunkel</string>
    <string name="theme_variant_system">Standard</string>
    <string name="error_timeout">Der Server hat nicht rechtzeitig geantwortet. Versuche es später noch einmal</string>
    <string name="error_io">Es gab ein Problem bei der Datenübertragung. Versuche es erneut</string>
    <string name="error_parsing">Der Server hat beschädigte Daten gesendet. Versuche es erneut</string>
    <string name="error_unknown">Ein unbekannter Fehler ist aufgetreten. Versuche es erneut</string>
    <string name="error_ssl">
        Die Sicherheitszertifikate sind ungültig. Überprüfe ob es ein Update für die App gibt
    </string>
    <string name="error_internal">
        Der Server hat einen internen Fehler gemeldet. Möglicherweise ist gerade eine Wartung im Gange.
        Versuche es später erneut
    </string>
    <string name="error_no_network">Dein Gerät ist nicht mit dem Internet verbunden</string>
    <string name="error_invalid_token">Du wurdest zu deiner Sicherheit automatisch abgemeldet. Melde dich erneut an
    </string>
    <string name="error_login_credentials">Falsches Passwort oder falscher Nutzername</string>
    <string name="error_login_two_factor_authentication">
        Bitte gib deinen Geheimschlüssel für die Zwei-Faktor-Authentifizierung ein! Der Code wird dir entweder per E-Mail zugesendet oder du findest ihn in deiner Authenticator-App.
    </string>
    <string name="error_login_ip_authentication">
        Du meldest dich von einem unbekannten IP-Netz an. Du wirst in wenigen Minuten eine E-Mail von uns erhalten.
        Bitte öffne den Link, der dort angegeben wird, um dich einloggen zu können
    </string>
    <string name="error_already_in_list">Es gibt bereits einen Eintrag in deiner Liste</string>
    <string name="error_list_full">Deine Liste ist voll</string>
    <string name="error_list_top_access_reset">Die Zugriffe wurden kürzlich zurückgesetzt.
        Es dauert ein paar Tage bis die Liste wieder verfügbar ist
    </string>
    <string name="error_insufficient_permissions">Diese Information wurde vom Benutzer nicht freigegeben, eventuell
        musst du dich anmelden
    </string>
    <string name="error_insufficient_permissions_logged_in">Diese Information wurde vom Benutzer nicht freigegeben
    </string>
    <string name="error_invalid_chapter">Dieses Kapitel wurde noch nicht hochgeladen :/</string>
    <string name="error_invalid_episode">Diese Episode wurde noch nicht hochgeladen :/</string>
    <string name="error_invalid_input">Ungültige Eingabe</string>
    <string name="error_cant_add_user_to_conference">Dieser Nutzer existiert nicht oder kann der Konferenz nicht
        hinzugefügt werden
    </string>
    <string name="error_invalid_users_for_conference">Es muss mindestens ein existierender Teilnehmer angegeben werden
    </string>
    <string name="error_conference_full">Es können keine weiteren Nutzer zur Konferenz hinzugefügt werden, da sie voll
        ist
    </string>
    <string name="error_invalid_topic">Ungültiges Thema</string>
    <string name="error_account_expired">Der Account ist abgelaufen</string>
    <string name="error_account_blocked">Der Account wurde geblockt</string>
    <string name="error_api">Die Schnittstelle hat einen Fehler gemeldet.
        Bitte überprüfe, ob du die neuste Version verwendest und informiere dann einen Techniker
    </string>
    <string name="error_maintenance">Proxer wird grade gewartet. Probiere es später noch einmal</string>
    <string name="error_client">Die App hat fehlerhafte Daten geschickt. Bitte informiere einen Techniker</string>
    <string name="error_invalid_id">Der Eintrag existiert nicht (mehr)</string>
    <string name="error_unsupported_code">
        Dieser Fehler wird nicht unterstützt. Bitte informiere einen Techniker
    </string>
    <string name="error_chat_seven_days">
        Du musst mindestens sieben Tage angemeldet sein, bevor du Nachrichten senden kannst
    </string>
    <string name="error_chat_blacklist">Du bist aktuell vom Chat ausgeschlossen</string>
    <string name="error_chat_no_permissions">Du hast nicht die nötigen Berechtigungen für diesen Chat</string>
    <string name="error_forum_no_permissions">Du hast nicht die nötigen Berechtigungen für diesen Thread</string>
    <string name="error_comment_no_permissions">Du hast nicht die nötigen Berechtigungen für diesen Kommentar</string>
    <string name="error_comment_not_active_yet">Dieses Werk kann noch nicht bewertet werden</string>
    <string name="error_wiki_no_permissions">Du hast nicht die nötigen Berechtigungen für diesen Artikel</string>
    <string name="error_login">Du bist nicht angemeldet</string>
    <string name="error_login_required">Für diesen Bereich musst du dich anmelden</string>
    <string name="error_captcha">Es wurden zu viele Anfragen gemacht</string>
    <string name="error_rate_limit">Du machst derzeit viele Anfragen. Bitte warte einen Moment um die Server zu schonen</string>
    <string name="error_age_confirmation_needed">
        Für diesen Inhalt musst du bestätigen, dass du mindestens 18 Jahre alt bist
    </string>
    <string name="error_refresh">Aktualisierung fehlgeschlagen: %s</string>
    <string name="error_unsupported_hoster">Dieser Hoster wird\nnicht unterstützt</string>
    <string name="error_stream_resolution">Fehler beim Laden des Streams. Das Video ist eventuell nicht mehr verfügbar
    </string>
    <string name="error_manga_not_available">
        Dieses Kapitel ist (derzeit) nicht verfügbar.\n
        Möglicherweise wurde es entfernt oder der Server hat Probleme
    </string>
    <string name="error_manga_link">
        Dieses Kapitel ist aufgrund einer Lizenzierung nicht im internen Reader verfügbar
    </string>
    <string name="error_comment_too_long">Der Kommentar darf maximal 20000 Zeichen lang sein</string>
    <string name="error_comment_invalid_progress">Es kann kein Kommentar für vermerkte Werke veröffentlich werden</string>
    <string name="error_input_empty">Gib etwas ein</string>
    <string name="error_duplicate_participant">Diesen Teilnehmer hast du schon hinzugefügt</string>
    <string name="error_self_participant">Du kannst dich nicht selbst hinzufügen</string>
    <string name="error_missing_message">Gib eine Nachricht ein</string>
    <string name="error_missing_participants">Füge mindestens einen Teilnehmer hinzu</string>
    <string name="error_video_deleted">Das Video ist nicht mehr verfügbar</string>
    <string name="error_video_service_unavailable">
        Der Hoster ist (temporär) nicht verfügbar. Versuche es später erneut
    </string>
    <string name="error_video_unknown">Es gab ein unbekanntes Problem mit dem Hoster. Versuche es später erneut</string>
    <string name="error_media_removed_due_to_copyright">
        Dieses Werk ist aufgrund von einer Lizenzierung in der App nicht verfügbar
    </string>
    <string name="error_no_data">Keine Daten</string>
    <string name="error_no_data_news">Derzeit sind keine News verfügbar</string>
    <string name="error_no_data_notifications">Derzeit gibt es keine Benachrichtigungen</string>
    <string name="error_no_data_bookmark">Du hast noch keine Lesezeichen angelegt</string>
    <string name="error_no_data_top_ten">Es wurde noch nichts in die Top 10 aufgenommen</string>
    <string name="error_no_data_history">Noch keine Einträge verfügbar</string>
    <string name="error_no_data_schedule">Für heute ist nichts eingetragen</string>
    <string name="error_no_data_episodes">Es sind (noch) keine Episoden verfügbar</string>
    <string name="error_no_data_chapters">Es sind (noch) keine Kapitel verfügbar</string>
</resources>