<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/colorOutlineVariant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_variant_title"
            android:textAppearance="?attr/textAppearanceLabelMedium" />

        <RadioGroup
            android:id="@+id/nightRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            tools:ignore="NegativeMargin">

            <RadioButton
                android:id="@+id/systemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_variant_system" />

            <RadioButton
                android:id="@+id/lightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_variant_light" />

            <RadioButton
                android:id="@+id/darkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_variant_dark" />
        </RadioGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/amoledCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="8dp"
            android:text="@string/theme_amoled"
            tools:ignore="NegativeMargin" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
